# dataperro

./: Taskfile.yml  flake.nix  pyproject.toml
.github/workflows/: pr-check.yml
containers/: Dockerfile  Taskfile.yml
src/dataperro/: __init__.py  cli.py
tests/: test_main.py
